--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,10 +1,13 @@
 .contact {
+    height: 70px;
     background-color: $primary;
     color: white;
     border-radius: 5px;
     border-width: 0;
-    width: 25%;
+    width: 130px;
     padding: 20px 0px;
     font-weight: 500;
     font-size: 1em;
+
+    font-family: 'DM Sans', sans-serif;
 }
