--- a/sass/layout/_gallery.scss
+++ b/sass/layout/_gallery.scss
@@ -1,9 +1,17 @@
 .image {
+    width: 100%;
     img {
-        width: 300px;
+        width: 100%;
+        height: 300px;
+        object-fit: cover;
+        border-radius: 5px;
     }
     &__heading {
-        display: flex;
-        justify-content: space-between;
+        margin-top: 10px;
+        display: grid;
+        grid-template-columns: 10fr 1fr 1fr;
+        color: $primary;
+        font-weight: 400;
+        font-size: 1.2em;
     }
 }
