--- a/main.css
+++ b/main.css
@@ -108,7 +108,7 @@ html {
 .profile-container img {
   position: absolute;
   left: 80%;
-  top: 28%;
+  top: 25%;
 }
 
 /* Layout */
@@ -219,16 +219,19 @@ html {
   opacity: 0.6;
 }
 
-.image {
+.image, .video {
   width: 100%;
 }
-.image img {
+.image img, .video img {
   width: 100%;
   height: 300px;
   object-fit: cover;
   border-radius: 5px;
 }
-.image__heading {
+.image video, .video video {
+  width: 100%;
+}
+.image__heading, .video__heading {
   margin-top: 10px;
   display: grid;
   grid-template-columns: 10fr 1fr 1fr;
