--- a/sass/layout/_gallery.scss
+++ b/sass/layout/_gallery.scss
@@ -1,10 +1,13 @@
-.image {
+.image, .video {
     width: 100%;
     img {
         width: 100%;
         height: 300px;
         object-fit: cover;
         border-radius: 5px;
+    }
+    video {
+        width: 100%;
     }
     &__heading {
         margin-top: 10px;
