--- a/sass/layout/_gallery.scss
+++ b/sass/layout/_gallery.scss
@@ -16,5 +16,8 @@
         color: $primary;
         font-weight: 400;
         font-size: 1.2em;
+        i {
+            text-align: end;
+        }
     }
 }
