--- a/sass/layout/_photographer_profile.scss
+++ b/sass/layout/_photographer_profile.scss
@@ -25,6 +25,7 @@
         font-size: 0.9em;
     }
     &__price {
+        margin-top: 4px;
         font-size: 0.8em;
         color: grey;
     }
