--- a/main.css
+++ b/main.css
@@ -261,9 +261,11 @@ label {
   height: 300px;
   object-fit: cover;
   border-radius: 5px;
+  cursor: pointer;
 }
 .image video, .video video {
   width: 100%;
+  cursor: pointer;
 }
 .image__heading, .video__heading {
   margin-top: 10px;
@@ -301,6 +303,10 @@ label {
   font-weight: 400;
   margin: 10px 0 20px 0;
   white-space: nowrap;
+}
+.form-container form .form-data-container {
+  display: flex;
+  flex-direction: column;
 }
 .form-container form .form-data {
   color: #312E2E;
@@ -352,6 +358,110 @@ label {
   height: 40px;
   width: 5px;
   background-color: white;
+}
+
+.form-data-container[data-error]::after {
+  content: attr(data-error);
+  font-size: 0.8em;
+  color: #a30414;
+  display: block;
+  margin-top: 7px;
+  margin-bottom: 7px;
+  text-align: right;
+  line-height: 0.3;
+  opacity: 0;
+  transition: 0.3s;
+}
+
+.form-data-container[data-error-visible=true]::after {
+  opacity: 1;
+}
+
+.form-data-container[data-error-visible=true] input, .form-data-container[data-error-visible=true] textarea {
+  border: 2px solid #e54858;
+}
+
+input[data-error]::after {
+  content: attr(data-error);
+  font-size: 0.4em;
+  color: #e54858;
+}
+
+#form-sent {
+  height: 70%;
+  width: 33%;
+}
+
+#confirmation-msg {
+  text-align: center;
+  padding: 300px 5%;
+  font-size: 1.3em;
+}
+
+.lightbox {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  margin: auto;
+  background-color: white;
+}
+.lightbox button {
+  opacity: 0.8;
+  transition: 300ms;
+  cursor: pointer;
+  margin: 20px;
+  width: 40px;
+}
+.lightbox button:hover {
+  transition: 200ms;
+  opacity: 1;
+}
+.lightbox__close {
+  background: url(/svg/Vector.svg) center center/30px no-repeat;
+  height: 50px;
+  border: none;
+  position: absolute;
+  top: 3%;
+  right: 18%;
+}
+.lightbox__prev {
+  background: url(/svg/Vector-next.svg) center center/30px no-repeat;
+  height: 50px;
+  border: none;
+  transform: rotate(180deg);
+  position: absolute;
+  left: 18%;
+  top: 45%;
+}
+.lightbox__next {
+  background: url(/svg/Vector-next.svg) center center/30px no-repeat;
+  height: 50px;
+  border: none;
+  right: 18%;
+  position: absolute;
+  top: 45%;
+}
+.lightbox__container {
+  margin: auto;
+  padding: 50px 20%;
+  display: flex;
+  justify-content: center;
+}
+.lightbox__container img {
+  margin: auto;
+  object-fit: cover;
+  width: calc(100% - 50px);
+  max-width: 1050px;
+  height: 800px;
+}
+.lightbox__heading {
+  position: absolute;
+  left: 24%;
+  bottom: 25px;
+  color: #901C1C;
+  font-size: 1.2em;
 }
 
 /*# sourceMappingURL=main.css.map */
