--- a/sass/layout/_gallery.scss
+++ b/sass/layout/_gallery.scss
@@ -1,14 +1,10 @@
 .image, .video {
     width: 100%;
-    img {
+    img, video {
         width: 100%;
         height: 300px;
         object-fit: cover;
         border-radius: 5px;
-        cursor: pointer;
-    }
-    video {
-        width: 100%;
         cursor: pointer;
     }
     &__heading {
