--- a/sass/layout/_gallery.scss
+++ b/sass/layout/_gallery.scss
@@ -1,5 +1,7 @@
 .image, .video {
     width: 100%;
+    @include fade-in-animation($slow-duration);
+    
     img, video {
         width: 100%;
         height: 300px;
@@ -17,6 +19,27 @@
         i {
             text-align: end;
             cursor: pointer;
+            transition: 200ms;
         }
+        i:hover { 
+            scale: 1.1;
+            transition: 200ms;
+        }
+        i:active {
+            animation: like 800ms linear;
+            color: red;
+        }
+    }
+}
+
+@keyframes like {
+    0% {
+        scale: 1.1;
+    }
+    50% {
+        scale: 1.5 ;
+    }
+    100% {
+        scale: 1;
     }
 }
