--- a/sass/layout/_photographer_profile.scss
+++ b/sass/layout/_photographer_profile.scss
@@ -1,6 +1,8 @@
 .photographer-profile {
     text-align: center;
-    animation: displayLightbox 500ms;
+    @include fade-in-animation($slow-duration);
+    
+
     *{
         padding: 5px;
         text-decoration: none;
@@ -10,6 +12,7 @@
         border-radius: 200px;
         height: 200px;
         object-fit: cover;
+
     }
     &__heading {
         font-size: 2.5em;
@@ -33,14 +36,5 @@
     &__tags {
         font-size: 12px;
         font-weight: 500;
-    }
-}
-
-@keyframes displayLightbox {
-    0% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 100%;
     }
 }
