--- a/sass/layout/_tags.scss
+++ b/sass/layout/_tags.scss
@@ -47,15 +47,27 @@
 .tag[my-tag="true"] {
     font-weight: 800;
     border-color: $primary;
+
     &:hover {
         border-color: gray;
         color: gray;
         transition: none;
+        @include tablet { border-color: unset;
+            color: unset;
+            transition: unset;
+        }
         &::after { content: ' x';
-            color: rgba(202, 0, 0, 0.719); }
+            color: rgba(202, 0, 0, 0.719);
+            @include tablet {
+                content: none;
+                color: unset; 
+            } 
+        }
+            
     }
 }
-
+   
+    
 .tag[my-tag="false"] {
     opacity: 0.6;
 }
