--- a/sass/layout/_gallery.scss
+++ b/sass/layout/_gallery.scss
@@ -11,7 +11,7 @@
     @include fade-in-animation($slow-duration);
 
     @include tablet {
-        margin: 10px;
+        margin: 30px 10px;
         width: auto;
     }
     
