--- a/sass/layout/_photographer_profile.scss
+++ b/sass/layout/_photographer_profile.scss
@@ -20,7 +20,7 @@
     &__heading {
         font-size: 2.5em;
         color: $secondary;
-        font-size: 400;
+        font-weight: 400;
         margin-bottom: -15px;
     }
     &__location {
