--- a/sass/pages/_photographer.scss
+++ b/sass/pages/_photographer.scss
@@ -62,6 +62,9 @@
                 left: auto;
                 top: 140px;
             }
+            &__tagline {
+                width: 80%;
+            }
             .tag-list {
                 justify-content: start;
                 flex-wrap: wrap;
@@ -72,6 +75,11 @@
                 font-size: 0.8em;
                 padding: 5px;
             }
+        }
+    }
+    @include small-mobile {
+        .photographer-profile {
+            width: 60%;
         }
     }
 
@@ -104,4 +112,10 @@
     display: flex;
     justify-content: center;
     font-size: 2em;
+    text-align: center;
+    margin: $big-spacing $small-spacing;
+
+    @include tablet {
+        font-size: 1.2em;
+    }
 }
