--- a/sass/layout/_lightbox.scss
+++ b/sass/layout/_lightbox.scss
@@ -27,7 +27,7 @@
         }
     }
     &__close {
-        background: url(/svg/Vector.svg) center center / 30px no-repeat;
+        background: url(./svg/Vector.svg) center center / 30px no-repeat;
         height: 50px;
         border: none;
         position: absolute;
@@ -40,14 +40,14 @@
         }
         
         @include tablet { 
-            background: url(/svg/Vector.svg) center center / 15px no-repeat;
+            background: url(./svg/Vector.svg) center center / 15px no-repeat;
             right: -4%;
             top: 27%;
         }
 
     }
     &__prev {
-        background: url(/svg/Vector-next.svg) center center / 30px no-repeat;
+        background: url(./svg/Vector-next.svg) center center / 30px no-repeat;
         height: 50px;
         border: none;
         transform: rotate(180deg);
@@ -60,13 +60,13 @@
         }
 
         @include tablet { 
-            background: url(/svg/Vector-next.svg) center center / 15px no-repeat;
+            background: url(./svg/Vector-next.svg) center center / 15px no-repeat;
             left: -6%;
         }
 
     }
     &__next {
-        background: url(/svg/Vector-next.svg) center center / 30px no-repeat;
+        background: url(./svg/Vector-next.svg) center center / 30px no-repeat;
         height: 50px;
         border: none;
         right: 18%;
@@ -78,7 +78,7 @@
         }
 
         @include tablet { 
-            background: url(/svg/Vector-next.svg) center center / 15px no-repeat;
+            background: url(./svg/Vector-next.svg) center center / 15px no-repeat;
             right: -6%;
         }
     }
