--- a/main.css
+++ b/main.css
@@ -50,6 +50,10 @@ body {
   }
 }
 
+*:focus {
+  outline: solid orange;
+}
+
 ol, ul {
   list-style: none;
 }
@@ -107,7 +111,7 @@ html {
   }
 }
 
-.sort-by, .sort-by option {
+.sort-by, .sort-by__option {
   background-color: #901C1C;
   color: white;
   border-width: 0;
@@ -121,6 +125,9 @@ html {
   top: 50px;
   right: 9%;
   color: #901C1C;
+}
+.title h1 {
+  font-weight: 400;
 }
 @media (max-width: 1578px) {
   .title {
@@ -168,7 +175,7 @@ html {
 }
 
 @media (max-width: 769px) {
-  .sort-by, .sort-by option {
+  .sort-by, .sort-by__option {
     display: none;
   }
 }
@@ -454,24 +461,24 @@ html {
   }
 }
 
-.image, .video {
+.media {
   width: 100%;
   animation: displayLightbox cubic-bezier(0.39, 0.58, 0.57, 1) 800ms;
 }
 @media (max-width: 769px) {
-  .image, .video {
+  .media {
     margin: 30px 10px;
     width: auto;
   }
 }
-.image img, .image video, .video img, .video video {
+.media img, .media video {
   width: 100%;
   height: 300px;
   object-fit: cover;
   border-radius: 5px;
   cursor: pointer;
 }
-.image__heading, .video__heading {
+.media__heading {
   margin-top: 10px;
   display: grid;
   grid-template-columns: 10fr 1fr 1fr;
@@ -479,16 +486,16 @@ html {
   font-weight: 400;
   font-size: 1.2em;
 }
-.image__heading i, .video__heading i {
+.media__heading i {
   text-align: end;
   cursor: pointer;
   transition: 200ms;
 }
-.image__heading i:hover, .video__heading i:hover {
+.media__heading i:hover {
   scale: 1.1;
   transition: 200ms;
 }
-.image__heading i:active, .video__heading i:active {
+.media__heading i:active {
   animation: like 800ms linear;
   color: red;
 }
@@ -681,7 +688,7 @@ input[data-error]::after {
   opacity: 1;
 }
 .lightbox__close {
-  background: url(/svg/Vector.svg) center center/30px no-repeat;
+  background: url(./svg/Vector.svg) center center/30px no-repeat;
   height: 50px;
   border: none;
   position: absolute;
@@ -696,13 +703,13 @@ input[data-error]::after {
 }
 @media (max-width: 769px) {
   .lightbox__close {
-    background: url(/svg/Vector.svg) center center/15px no-repeat;
+    background: url(./svg/Vector.svg) center center/15px no-repeat;
     right: -4%;
     top: 27%;
   }
 }
 .lightbox__prev {
-  background: url(/svg/Vector-next.svg) center center/30px no-repeat;
+  background: url(./svg/Vector-next.svg) center center/30px no-repeat;
   height: 50px;
   border: none;
   transform: rotate(180deg);
@@ -717,12 +724,12 @@ input[data-error]::after {
 }
 @media (max-width: 769px) {
   .lightbox__prev {
-    background: url(/svg/Vector-next.svg) center center/15px no-repeat;
+    background: url(./svg/Vector-next.svg) center center/15px no-repeat;
     left: -6%;
   }
 }
 .lightbox__next {
-  background: url(/svg/Vector-next.svg) center center/30px no-repeat;
+  background: url(./svg/Vector-next.svg) center center/30px no-repeat;
   height: 50px;
   border: none;
   right: 18%;
@@ -736,7 +743,7 @@ input[data-error]::after {
 }
 @media (max-width: 769px) {
   .lightbox__next {
-    background: url(/svg/Vector-next.svg) center center/15px no-repeat;
+    background: url(./svg/Vector-next.svg) center center/15px no-repeat;
     right: -6%;
   }
 }
