--- a/sass/components/_select.scss
+++ b/sass/components/_select.scss
@@ -4,7 +4,7 @@
     border-width: 0;
     border-radius: 5px;
     padding: 12px;
-    option {
+    &__option {
         @extend .sort-by;
     }
 }
