--- a/main.css
+++ b/main.css
@@ -541,6 +541,9 @@ html {
   flex-direction: column;
   font-size: 1.1em;
 }
+.form-container form .hidden {
+  display: none;
+}
 .form-container form #form-title {
   line-height: 60px;
   font-size: 2.5em;
@@ -550,7 +553,7 @@ html {
 }
 @media (max-width: 769px) {
   .form-container form #form-title {
-    line-height: unset;
+    line-height: 40px;
   }
 }
 .form-container form .form-data-container {
@@ -626,7 +629,7 @@ html {
   color: #a30414;
   display: block;
   margin-top: 7px;
-  margin-bottom: 7px;
+  margin-bottom: 0px;
   text-align: right;
   line-height: 0.3;
   opacity: 0;
