--- a/sass/layout/_tags.scss
+++ b/sass/layout/_tags.scss
@@ -12,6 +12,7 @@
         color: $primary;
         font-weight: 500;
         font-size: 0.9em;
+        cursor: pointer;
 
         transition: 500ms;
     }
@@ -66,7 +67,6 @@
             
     }
 }
-   
     
 .tag[my-tag="false"] {
     opacity: 0.6;
