--- a/sass/layout/_photographer_profile.scss
+++ b/sass/layout/_photographer_profile.scss
@@ -9,7 +9,12 @@
     *{
         padding: 5px;
         text-decoration: none;
-    };
+    }
+
+    .link {
+        cursor: pointer;
+    }
+
     &__image {
         width: 200px;
         border-radius: 200px;
